<resources>
    <string name="app_name">Mini Contact Manager Tasks</string>
    <string name="Title">Android Mini Project Series</string>
    <string name="task_1">Task #1</string>
    <string name="task_2">Task #2</string>
    <string name="task_3">Task #3</string>
    <string name="welcome_massege">Welcome, Mr User!</string>
    <string name="share">Share</string>
    <string name="message">Message</string>
    <string name="save">Save</string>
    <string name="new_name">New Name</string>
    <string name="mohamed_mostafa">Mohamed Mostafa</string>
    <string name="main_activity">Main Activity</string>
    <string name="don_t_waste_your_time">Don\'t Waste your Time</string>
    <string name="oops_the_task_was_removed">Oops the Task Was Removed!</string>
</resources>